# dance-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose-dev.yml  pole_moves.json  pyproject.toml  start.sh
dance/: Dockerfile  package-lock.json  package.json
dance/app/: page.tsx
dance/app/chats/: chat.css  page.tsx
dance/app/components/ChatBubble/: Chat.tsx  StartChat.tsx
data/: pole_moves.json
data/urls/: anastasia-frog  anchor-grip  armpit-hold  assisted-pencil-spin  attitude-spin  back-ankle-grip  back-hook-spin  backbend  backslide  ballerina-spin  baseball-grip  basic-body-rolls  basic-foot-hold  basic-headstand  basic-invert  basic-leg-waves  basic-pole-climb  brass-monkey  butterfly-handstand  carousel-spin  chair-spin  cleopatra  corkscrew-spin  cradle-spin  cross-knee-hold  cross-knee-layback  cup-grip  dip-spin  drama-queen  elbow-grip  fan-kick  fireman-spin  foot-mount  football-grip  forearm-grip-shelf  front-hook-spin  funky-grip  half-bracket-grip  heel-clacks  hello-boys  (+40 more)
src/agent/orchestration/: agent_node.py  anthropic_client.py  dance_graph.py  main.py
src/dance_mcp/: api.py  chroma_db.py  server.py
src/dance_mcp/client/: langchain_mcp_client.py
src/dance_mcp/servers/: data_scraping_server.py  fetch_server.py
src/dance_mcp/servers/spotify/: spotify_auth.py  spotify_server.py
src/utils/: chroma_db.py  moves_data.py  visualize_db.py
