[project]
name = "dance-mcp"
version = "0.1.0"
description = ""
authors = [
    {name = "Max Liu",email = "maxine.m.liu@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "mypy (>=1.18.2,<2.0.0)",
    "pylint (>=4.0.2,<5.0.0)",
    "black (>=25.9.0,<26.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "taskipy (>=1.14.1,<2.0.0)",
    "mcp[cli] (>=1.19.0,<2.0.0)",
    "chromadb (>=1.2.2,<2.0.0)",
    "flask (>=3.1.2,<4.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "langchain-anthropic (>=1.0.1,<2.0.0)",
    "langgraph (>=1.0.2,<2.0.0)",
    "langchain-mcp-adapters (>=0.1.12,<0.2.0)",
    "fastapi[standard] (>=0.123.9,<0.124.0)",
    "uvicorn[standard] (>=0.40.0,<0.41.0)",
    "chromaviz @ git+https://github.com/mtybadger/chromaviz/",
    "flask-cors (>=6.0.2,<7.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
lint = "pylint src/ && black src/ && mypy src/"

[tool.pylint.messages_control]
disable = ["W0511"]

[tool.poetry.scripts]
start = "src.dance_mcp.api:start"
